src/input/css/styles/breeze/text.css
/*
 * SPDX-License-Identifier: BSD-2-Clause
 * SPDX-FileCopyrightText: 2025 Arjen Hiemstra <ahiemstra@heimr.nl>
 */

/*
 * Text display and input related controls.
 */

label {
    color: var(--window-text-color);
}

textfield,
textarea,
spinbox
{
    height: var(--medium-element-size);
    padding: var(--medium-spacing);
    border-radius: var(--corner-radius);

    border: 1px solid var(--view-border-color);
    background-color: var(--view-background-color);
    color: var(--view-text-color);

    &:hovered,
    &:active-focus {
        border: 1px solid var(--highlight-color);
    }

    &:visual-focus {
        outline: 2px solid var(--focus-color);
    }

    .placeholder
    {
        color: mix(var(--view-text-color), var(--view-background-color), 0.3);
    }
}

textfield,
textarea
{
    width: 200px;
}

spinbox
{
    width: var(--medium-element-size);
    layout-alignment: content fill fill 0;
    text-alignment: content fill fill 0;
    padding-left: var(--large-spacing);
    padding-right: var(--large-spacing);
    padding-top: var(--small-spacing);
    padding-bottom: var(--small-spacing);

    color: var(--button-active-text-color);
}

spinbox indicator
{
    width: var(--large-element-size);
    height: var(--large-element-size);
    border-radius: var(--corner-radius);
    border-color: var(--button-active-border-color);
    color: var(--button-active-text-color);

    layout-alignment-container: item;
    layout-alignment-vertical: fill;
}

spinbox indicator:hovered {
    border-color: var(--highlight-color);
}

spinbox indicator:pressed {
    background-color: var(--highlight-color);
}

spinbox indicator:disabled {
    color: var(--button-disabled-text-color);
}

spinbox indicator.decrease
{
    layout-alignment-horizontal: start;
    icon-name: "arrow-down-symbolic";
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
    border-right-width: 1px;
}

spinbox indicator.increase
{
    layout-alignment-horizontal: end;
    icon-name: "arrow-up-symbolic";
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
    border-left-width: 1px;
}

